fix: Adjusted colors for restaurant titles and links to comply with a11y contrast standards

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #006cb5;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -193,7 +193,7 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #006cb5;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
